Build project with jib-maven-plugin