@@ -12,15 +12,11 @@ envsubst < /conf/docker-application.properties.tmpl > /conf/docker-application.p
 java -Djava.security.egd=file:/dev/./urandom \
      -Djava.net.preferIPv4Stack=true \
      -Djboss.server.config.dir=/conf \
-     -XX:+UnlockExperimentalVMOptions \
-     -XX:+UseCGroupMemoryLimitForHeap \
      -XX:+ExitOnOutOfMemoryError \
      -XX:+CrashOnOutOfMemoryError \
-     -XX:MinHeapFreeRatio=20 \
-     -XX:MaxHeapFreeRatio=40 \
      -XX:GCTimeRatio=4 \
      -XX:AdaptiveSizePolicyWeight=90 \
-     -jar /opt/app.jar \
+     -cp app/libs/*:app/resources:app/classes si.slotex.nlp.SlotexNlpWebApplication \
      --spring.config.location=file:/conf/docker-application.properties
 
 exit 0
